[package]
name = "reedline-repl-rs"
version = "1.1.0"
authors = [
    "Artur Hallmann <arturh@arturh.de>",
    "Jack Lund <jackl@geekheads.net>",
]
description = "Library to generate a fancy REPL for your application based on reedline and clap"
license = "MIT"
repository = "https://github.com/arturh85/reedline-repl-rs"
homepage = "https://github.com/arturh85/reedline-repl-rs"
readme = "README.md"
keywords = ["repl", "interpreter", "clap"]
categories = ["command-line-interface"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reedline = { version = "0.28.0", features = ["external_printer"] }
nu-ansi-term = { version = "0.49.0" }
crossterm = { version = "0.27.0" }
yansi = "1.0.0"
regex = "1"
clap = "4"

[dev-dependencies]
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
] } # only for async example

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.6"

[features]
default = []
async = []
scripts = []
macro = ["clap/cargo"]
derive = ["clap/derive"]

[[example]]
name = "async"
required-features = ["async"]

[[example]]
name = "macro"
required-features = ["macro"]

[[example]]
name = "derive_hello_world"
path = "examples/derive/hello_world.rs"
required-features = ["derive"]

[[example]]
name = "derive_no_context"
path = "examples/derive/no_context.rs"
required-features = ["derive"]

[[example]]
name = "derive_subcommands"
path = "examples/derive/subcommands.rs"
required-features = ["derive"]

[[example]]
name = "derive_with_context"
path = "examples/derive/with_context.rs"
required-features = ["derive"]
